<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_notification"
        android:title="@string/notification" />

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat"
        android:visible="false" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

    <item
        android:id="@+id/nav_appointment"
        android:icon="@drawable/ic_calender"
        android:title="@string/appointment" />

    <item
        android:id="@+id/nav_balance"
        android:icon="@drawable/ic_menu_balance"
        android:title="@string/balance" />

</menu>