<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F4F4F4">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.07" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back_details_chat"
            app:layout_constraintStart_toStartOf="@+id/gl1"
            app:layout_constraintTop_toTopOf="@+id/gl4" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/v1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/ic_rectangle_105"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toStartOf="@+id/gl2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gl1"
            app:layout_constraintTop_toBottomOf="@+id/ivBack" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWalletBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/v1"
            app:layout_constraintEnd_toStartOf="@+id/gl2"
            app:layout_constraintStart_toStartOf="@+id/gl1"
            app:layout_constraintTop_toTopOf="@+id/v1"
            tools:text="$0" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvProfileBoost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/boost_my_profile"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/v1"
            app:layout_constraintTop_toTopOf="@+id/v1" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/l1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/balance"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@+id/v1"
            app:layout_constraintStart_toStartOf="@+id/v1"
            app:layout_constraintTop_toBottomOf="@+id/tvWalletBalance" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ivCashOut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_40sdp"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/cash_out"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gl2"
            app:layout_constraintStart_toStartOf="@+id/gl1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/ivCashOut"
            app:layout_constraintEnd_toStartOf="@+id/gl2"
            app:layout_constraintStart_toStartOf="@+id/gl1"
            app:layout_constraintTop_toBottomOf="@+id/v1">

            <EditText
                android:id="@+id/etBankName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/productsans_regular"
                android:hint="@string/bank_name"
                android:inputType="text"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etAccountTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:fontFamily="@font/productsans_regular"
                android:hint="@string/account_holder_name"
                android:inputType="text"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etBankName" />

            <EditText
                android:id="@+id/etAccountNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:fontFamily="@font/productsans_regular"
                android:hint="@string/account_number"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etAccountTitle" />

            <EditText
                android:id="@+id/etAccountType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:fontFamily="@font/productsans_regular"
                android:hint="@string/account_type"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etAccountNumber" />

            <EditText
                android:id="@+id/etIban"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:fontFamily="@font/productsans_regular"
                android:hint="@string/iban"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etAccountType" />

            <EditText
                android:id="@+id/etSwiftCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:fontFamily="@font/productsans_regular"
                android:hint="@string/swift_code"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etIban" />

            <EditText
                android:id="@+id/etAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:fontFamily="@font/productsans_regular"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etSwiftCode" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>