<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_signin"
    tools:context="com.wecareapp.android.ui.activity.SignInActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_transparent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.12"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.88" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_wave_bottom"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSkip"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/ic_button_background_white"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_20sdp"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="#7DC8C6"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gl1"
        app:layout_constraintTop_toTopOf="@+id/appCompatImageView" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llSignInLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/gl1"
        app:layout_constraintTop_toBottomOf="@id/tvSkip">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_4sdp"
            android:padding="@dimen/_5sdp"
            app:srcCompat="@drawable/ic_facebook" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_4sdp"
            android:padding="@dimen/_5sdp"
            app:srcCompat="@drawable/ic_google" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivTwitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            app:srcCompat="@drawable/ic_twitter" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:visibility="gone" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/gl1"
        app:layout_constraintTop_toBottomOf="@id/llSignInLayout">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_4sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/don_t_have_account"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_4sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/sign_up_u"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLanguage"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/ic_lang_bg"
        android:gravity="center"
        android:text="@string/ar"
        android:textAllCaps="false"
        android:textColor="#7DC8C6"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/gl2"
        app:layout_constraintTop_toTopOf="@+id/gl3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/gl1"
        app:layout_constraintTop_toTopOf="@id/gl3" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/gl1"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/ic_edit_text_background"
        android:hint="@string/email_or_contact"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/_20sdp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@+id/gl2"
        app:layout_constraintStart_toStartOf="@+id/gl1"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/ic_edit_text_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/_20sdp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@+id/gl2"
        app:layout_constraintStart_toStartOf="@+id/gl1"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_5sdp"
        android:text="@string/forgot_password_q"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toStartOf="@+id/gl2"
        app:layout_constraintStart_toStartOf="@+id/gl1"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/ic_button_background"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_20sdp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toStartOf="@+id/gl2"
        app:layout_constraintStart_toStartOf="@+id/gl1"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>